# ipchat

./: .gitignore  Makefile.am  buildclient.sh  buildserver.sh  client.c  configure.ac  server.c
chat/: Makefile.am  build.sh  buildclient.sh  buildserver.sh  client.c  configure.ac  server.c
chat/src/client/: client.c
chat/src/server/: clients.h  server.c
http/: Makefile.am  buildhttpclient.sh  configure.ac  httpclient.c
http/src/: cmdline.c  download.c  httpclient.c  httpclient.h  httprequest.c  httprequest.h  image.c  main.c
http/src/httpclient/: httpclient.h  httpcontext.c  httperr.c  httpnet.c  httprequest.c  httpresponse.c  httpresponse.h
src/client/: client.c
src/proto/: proto.c  proto.h
src/server/: clients.c  server.c
