bin_PROGRAMS = main
main_SOURCES = \
	src/main.c \
	src/httpclient/httperr.c \
	src/httpclient/httpclient.h \
	src/httpclient/httpcontext.c src/httpclient/httpcontext.h \
	src/httpclient/httprequest.c src/httpclient/httprequest.h \
	src/httpclient/httpresponse.c src/httpclient/httpresponse.h \
	src/httpclient/httpnet.c src/httpclient/httpnet.h
